--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <label for="sessionID">Session ID</label>
         <input type="text" id="sessionID">
 
-        <button type="button" id="downloadBtn">Download</button>
+        <button type="button" id="receiveBtn">Receive</button>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
