--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <div id="app"></div>
     <div style="border: 2px solid black; padding: 1em; margin: 1em">
         <div>Send File</div>
         <input id="fileSelector" type="file" name="sendFile"/>
@@ -22,7 +23,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="app.js"></script>
 </body>
 
 </html>
