--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 </head>
 
 <body>
-    <div id="app"></div>
-    <div style="border: 2px solid black; padding: 1em; margin: 1em">
+    <div id="root"></div>
+    <!-- <div style="border: 2px solid black; padding: 1em; margin: 1em">
         <div>Send File</div>
         <input id="fileSelector" type="file" name="sendFile"/>
 
@@ -20,7 +20,7 @@
         <input type="text" id="sessionID">
 
         <button type="button" id="receiveBtn">Receive</button>
-    </div>
+    </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </body>
