send and receive working

--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,11 @@
 
 <body>
     <div id="root"></div>
-    <!-- <div style="border: 2px solid black; padding: 1em; margin: 1em">
-        <div>Send File</div>
-        <input id="fileSelector" type="file" name="sendFile"/>
-
-        <button type="button" id="sendFileBtn">Send</button>
-    </div>
-
-    <div style="border: 2px solid black; padding: 1em; margin: 1em">
-        <div>Receive File</div>
-
-        <label for="sessionID">Session ID</label>
-        <input type="text" id="sessionID">
-
-        <button type="button" id="receiveBtn">Receive</button>
-    </div> -->
+    <!--  -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
 </body>
 
 </html>
