--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,12 @@
 <html>
 
 <head>
-    <title>File Transfer Test</title>
+    <title>Retifish</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css"/>
+
+    <meta charset="utf-8">
+    <meta name="description" content="Send and receive large files for free in the browser.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
